fixtures/corpus/invalid/ctr-missing-class.rune
[REQ] order.place(InDto): OutDto
    [CTR]
    db:order.save(InDto): OutDto
      timeout
    [RET] OutDto

[DTO] InDto: a
    in

[DTO] OutDto: b
    out
